# cricket_intelligence_platform

./: .aiderignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  Makefile  README.md  planning.md  pyproject.toml  tree_full_paths.txt
.claude/: settings.json
.claude/skills/cip-add-silver-table/: SKILL.md
.claude/skills/cip-diagnose-dag/: SKILL.md
.claude/skills/cip-gold-refresh/: SKILL.md
.claude/skills/cip-inspect-table/: SKILL.md
.claude/skills/cip-pipeline-run/: SKILL.md
.claude/skills/cip-validate/: SKILL.md
.gemini/: settings.json
.gemini/skills/cip-add-silver-table/: SKILL.md
.gemini/skills/cip-diagnose-dag/: SKILL.md
.gemini/skills/cip-pipeline-run/: SKILL.md
.gemini/skills/cip-senior-engineer/: SKILL.md
analysis/: sample_data_queries.sql  validation_queries.sql
apps/fastapi/: app
conf/base/: ai.yaml  airflow.yaml  dbt.yaml  duckdb.yaml  mlflow.yaml  paths.yaml  polars.yaml  spark.yaml  storage.yaml
dashboard/: .env.example  README.md  observablehq.config.js  package-lock.json  package.json
dashboard/docs/: AI_DEVELOPMENT_GUIDE.md
dashboard/src/: index.md
docs/: jobs.md  planning.md  planning_dev.md
docs/adr/: 0001-use-modular-monolith.md  0002-use-apache-iceberg.md  0003-use-airflow-for-orchestration.md  0004-open-standards-first.md  0005-bigquery-as-secondary-target.md  0006-metricflow-as-semantic-layer.md  0007-fastapi-gateway-design.md  0008-sql-guardrails.md  0009-langgraph-agent-design.md  0010-scale-strategy.md  README.md  adr-template.md
docs/architecture/: as-built.md  data-flow.md  data-model.md  hld-hla.md  repo-structure.md  service-interactions.md  source-contracts.md  source-warehouse-contracts.md
docs/product/: roadmap.md  scope-v1.md  vision.md
docs/runbooks/: backfill-cricsheet.md  claude-dev-guide.md  dashboard.md  duckdb-iceberg-deletes.md  full-rebuild.md  gemini-dev-guide.md  local-bootstrap.md  recover-failed-dag.md
docs/silver_match_spec/: RUNBOOK.md  spec.md
infra/bootstrap/: create-buckets.sh  init-metastore.sql
infra/compose/: compose.base.yml  compose.dev.yml
infra/pgadmin/: servers.json  setup-pgpass.sh
models/dbt/: dbt_project.yml
models/dbt/seeds/: _seeds.yml  (+1 more)
notebooks/exploration/: ipl_data_prep.ipynb
platform/common/: exceptions.py  logging.py  settings.py
scripts/: bootstrap_match_file_audit.py  cleanup_silver_stale_snapshots.py  diag_silver_snapshots.py  export_gold_share.py  provision_metabase_dashboards.py  refresh_duckdb_views.py
support_docs/source_files/: README.txt  names.csv  people.csv
tests/: __init__.py
tests/unit/: conftest.py  test_example.py  test_settings.py
validation/: README.md  run.sh
validation/lib/: ai.sh  env.sh  log.sh  print_summary.sh  state.sh
validation/modes/: milestone.txt  pre-pr.txt  pre-push.txt
validation/modules/: 01_file_audit.sh  02_env_vars.sh  03_lint.sh  04_unit_tests.sh  05_compose_up.sh  06_bootstrap.sh  07_dag_validate.sh  08_contract_diff.sh  09_run_pipeline.sh  11_pg_control.sh  12_minio_landing.sh  13_bronze_inspect.sh  13b_bronze_semantic.sh  14_silver_inspect.sh  14b_silver_semantic.sh  15_airflow_e2e.sh  16_rerun_idempotency.sh  17_failure_triage.sh  18_final_report.sh
(+158 files in other folders)
