[tool.poetry]
name = "cricket-intelligence-platform"
version = "0.1.0"
description = "Open-source cricket lakehouse with MinIO, Iceberg, Airflow, Polars, PySpark, DuckDB, dbt, Superset, MLflow, and AI assistants."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "platform" }]

[tool.poetry.dependencies]
python = "^3.11"

# Core
pydantic = "^2.7.0"
python-dotenv = "^1.0.1"

# Ingestion / transform
polars = "^0.20.0"
pyspark = "^3.5.0"

# Storage / IO
minio = "^7.2.0"
boto3 = "^1.34.0"

# Orchestration client code (Airflow code can live in separate image deps later)
apache-airflow-client = "^2.9.0"

# Analytics
duckdb = "^1.0.0"

# Logging
structlog = "^24.0.0"

# Testing
pytest = "^8.1.0"
pytest-cov = "^5.0.0"

# Lint/format (for local use; CI can use same)
ruff = "^0.4.0"
black = "^24.4.0"
isort = "^5.13.0"
mypy = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    "*.ipynb",          # exclude Jupyter notebooks
    ".git",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
