[tool.poetry]
name = "cricket-intelligence-platform"
version = "0.1.0"
description = "Open-source cricket lakehouse with MinIO, Iceberg, Airflow, Polars, PySpark, DuckDB, dbt, Superset, MLflow, and AI assistants."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "cip", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

# Core
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
python-dotenv = "^1.0.1"
PyYAML = "^6.0.1"

# Ingestion / transform
polars = "^0.20.0"
pyspark = "^3.5.0"

# Storage / IO
boto3 = "^1.34.0"
httpx = "^0.28.1"

# Iceberg / Arrow
pyiceberg = ">=0.7.0,<1.0.0"
pyarrow = ">=14.0.0,<25.0.0"

# Database
psycopg2-binary = "^2.9.9"

# Orchestration client code
apache-airflow-client = "^2.9.0"

# Analytics
duckdb = "^1.0.0"
dbt-duckdb = ">=1.8.0,<2.0.0"

# Logging
structlog = "^24.0.0"

# Testing
pytest = "^8.1.0"
pytest-cov = "^5.0.0"

# Lint/format
ruff = "^0.4.0"
black = "^24.4.0"
isort = "^5.13.0"
mypy = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
graphifyy = "^0.7.13"
matplotlib = "^3.10.9"
pandas = "^3.0.3"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    "*.ipynb",
    ".git",
    ".claude",
    ".gemini",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = []

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
